exports[`test should override user provided attributes that aren't className 1`] = `
<div
  className="slide-panel pad-this-slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
  data-test-attr="ahoy thar">
  <div
    aria-hidden="true"
    className="panel" />
  <div
    className="main" />
</div>
`;

exports[`test should render a SlidePanel with a fullscreen state 1`] = `
<div
  className="slide-panel is-fullscreen"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small">
  <div
    aria-hidden="true"
    className="panel" />
  <div
    className="main" />
</div>
`;

exports[`test should render a SlidePanel with an open state 1`] = `
<div
  className="slide-panel is-open"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small">
  <div
    aria-hidden={null}
    className="panel" />
  <div
    className="main" />
</div>
`;

exports[`test should render a SlidePanel with fill 1`] = `
<div
  className="slide-panel fill"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small">
  <div
    aria-hidden="true"
    className="panel" />
  <div
    className="main" />
</div>
`;

exports[`test should render a SlidePanel with main content 1`] = `
<div
  class="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small">
  <div
    aria-hidden="true"
    class="panel" />
  <div
    class="main">
    <p>
      Main Content
    </p>
  </div>
</div>
`;

exports[`test should render a SlidePanel with panel content 1`] = `
<div
  class="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small">
  <div
    aria-hidden="true"
    class="panel">
    <p>
      Panel Content
    </p>
  </div>
  <div
    class="main" />
</div>
`;

exports[`test should render a SlidePanel with panelBehavior = overlay 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small">
  <div
    aria-hidden="true"
    className="panel" />
  <div
    className="main" />
</div>
`;

exports[`test should render a SlidePanel with panelBehavior = squish 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="squish"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small">
  <div
    aria-hidden="true"
    className="panel" />
  <div
    className="main" />
</div>
`;

exports[`test should render a SlidePanel with panelPosition = end 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small">
  <div
    aria-hidden="true"
    className="panel" />
  <div
    className="main" />
</div>
`;

exports[`test should render a SlidePanel with panelPosition = start 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="start"
  data-slide-panel-panel-size="small">
  <div
    aria-hidden="true"
    className="panel" />
  <div
    className="main" />
</div>
`;

exports[`test should render a SlidePanel with panelSize = large 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="large">
  <div
    aria-hidden="true"
    className="panel" />
  <div
    className="main" />
</div>
`;

exports[`test should render a SlidePanel with panelSize = small 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small">
  <div
    aria-hidden="true"
    className="panel" />
  <div
    className="main" />
</div>
`;

exports[`test should render a SlidePanel with the given extra attributes 1`] = `
<div
  className="slide-panel pad-this-slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
  data-test-attr="ahoy thar"
  id="my-slide-panel">
  <div
    aria-hidden="true"
    className="panel" />
  <div
    className="main" />
</div>
`;

exports[`test should render a default SlidePanel with no props 1`] = `
<div
  className="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small">
  <div
    aria-hidden="true"
    className="panel" />
  <div
    className="main" />
</div>
`;
